--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
 
-html{
+html {
     background-color: #18181B !important;
+    scroll-behavior: smooth;
 }
 
+@layer components {
 
+    .button-about {
+        @apply text-base hover:bg-zinc-700 py-2 px-5 rounded-md;
+    }
 
+    .button-active-about {
+        @apply text-base text-zinc-200 py-2 px-5 rounded-md bg-purple-600;
+    }
+
+    .button-nav {
+        @apply hover:text-purple-400;
+    }
+
+    .button-nav-active {
+        @apply text-purple-400 font-semibold
+    }
+}
+
+/* Custom Scrollbar Styles */
+.custom-scrollbar::-webkit-scrollbar {
+    width: 12px; /* Width of the entire scrollbar */
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: #2b2b2b; /* Background of the scrollbar track */
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #606060; /* Color of the scrollbar thumb */
+    border-radius: 10px; /* Rounded corners of the scrollbar thumb */
+    border: 3px solid #2b2b2b; /* Padding around the scrollbar thumb */
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #909090; /* Color of the scrollbar thumb on hover */
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-button {
+    display: none; /* Hides the scrollbar arrows */
+  }
+  
+  .custom-scrollbar {
+    scrollbar-width: thin; /* For Firefox */
+    scrollbar-color: #606060 #2b2b2b; /* For Firefox */
+  }
+  
