--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
-    color: #a6adbb;
+    /* color: #a6adbb; */
 }
 
 html {
